bat.bool1.in1020.In1020.scala.code
def in1020(a:Int, b:Int):Boolean = {
  val nb=0
  val fin=false
  for (nb <- 10 to 20) {
    if (a==nb){
      fin=true
    }
    if (b==nb){
      fin=true
    }
  }
  return fin
}